--- a/publican-redhat/ru-RU/Feedback.po
+++ b/publican-redhat/ru-RU/Feedback.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Feedback\n"
 "POT-Creation-Date: 2007-10-10 11:15+1000\n"
 "PO-Revision-Date: 2007-04-05 09:29+1000\n"
 "Last-Translator: Automatically generated\n"
