--- a/publican-jboss/ru-RU/Feedback.po
+++ b/publican-jboss/ru-RU/Feedback.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-07-04 06:19+0000\n"
+"POT-Creation-Date: 2008-10-14 00:06+0000\n"
 "PO-Revision-Date: 2007-04-05 09:29+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -40,15 +40,15 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:16
+#: Feedback.xml:14
 #, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:20
+#: Feedback.xml:17
 #, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
