--- a/publican/content/common/bn-IN/Conventions.po
+++ b/publican/content/common/bn-IN/Conventions.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2008-10-07 15:50+0530\n"
+"PO-Revision-Date: 2008-10-14 12:19+0530\n"
 "Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
 "Language-Team: Bengali INDIA <fedora-trans-bn_IN@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "এই নথির PDF ও মুদ্রিত সংস্করণে <ulink "
 "url=\"https://fedorahosted.org/liberation-fonts/\">Liberation ফন্ট</ulink> "
-"সংকলনের মুদ্রাক্ষর ব্যবহার করা হবে। কম্পিউটারের মধ্যে Liberation ফন্ট ইনস্টল থাকলে এই নথির HTML সংস্করণেও তা ব্যবহৃত হবে। অন্যথা, সমতূল্য বিকল্প মুদ্রাক্ষর প্রয়োগ করা হবে। উল্লেখ্য: Red Hat Enterprise Linux 5 ও ঊর্ধ্বতন সংস্করণে ডিফল্টরূপে Liberation Fonts অন্তর্বুক্ত করা হয়।"
+"সংকলনের মুদ্রাক্ষর ব্যবহার করা হবে। কম্পিউটারের মধ্যে Liberation ফন্ট ইনস্টল থাকলে এই নথির HTML সংস্করণেও তা ব্যবহৃত হবে। অন্যথা, সমতূল্য বিকল্প মুদ্রাক্ষর প্রয়োগ করা হবে। উল্লেখ্য: Red Hat Enterprise Linux 5 ও ঊর্ধ্বতন সংস্করণে ডিফল্টরূপে Liberation Fonts অন্তর্ভুক্ত করা হয়।"
 
 #. Tag: title
 #: Conventions.xml:16
@@ -164,7 +164,7 @@ msgstr ""
 "keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> টিপুন। X-Windows সেশানে প্রত্যাবর্তনের জন্য <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> টিপুন। </"
 "para> </blockquote> <para> প্রথম পংক্তিতে প্রযোজ্য কি-র অংশ উজ্জ্বল করা হয়। দ্বিতীয় পংক্তিটিতে তিনটি কি-র একত্রিত প্রয়োগের দুটি সংকলন উজ্জ্বল করা হয়। </para> <para> সোর্স কোড সম্পর্কে আলোচনার সময় অনুচ্ছেদের মধ্যে উল্লিখিত ক্লাসের নাম, মেথড, ফাংশান, ভেরিয়েবলের নাম ও প্রাপ্ত ফলাফলের মান <literal>মোনো-স্পেস্ড বোল্ড</"
 "literal>-এ লেখা হবে। উদাহরণস্বরূপ: </para> <blockquote> <para> ফাইল সম্পর্কিত ক্লাসের মধ্যে রয়েছে <classname>filesystem</classname> ফাইল-সিস্টেমের জন্য, <classname>file</"
-"classname> ফাইলের জন্য, এবং <classname>dir</classname> ডিরেক্টরির জন্য। প্রতিটি ক্লাসের ক্ষেত্রে প্রযোজ্য অনুমতি নির্ধারিত রয়েছে। </para> </blockquote> <para> <application>আপেক্ষিক বোল্ড</application> </para> <para> এই বিন্যাস দ্বারা সিস্টেমের মধ্যে প্রাপ্ত শব্দ অথবা পংক্তি যেমন অ্যাপ্লিকেশনের নাম; ডায়লগ বক্সের লেখা; লেবেল করা বাটন; চেক-বক্স ও রেডিও-বাটনের লেবেল; মেনু ও সাব-মেনুর শিরোনাম প্রভৃতি উল্লেখ করা হয়। উদাহরণস্বরূপ: </para> <blockquote> <para> <application>মাউস সম্পর্কিত পছন্দ</application> আরম্ভ করার জন্য প্রধান মেনু বার থেকে <guimenu>সিস্টেম > পছন্দ > মাউস</guimenu> নির্বাচন করুন। <guilabel>বাটন</guilabel> ট্যাবের মধ্যে <guilabel>বাঁহাতি মাউস</guilabel> শীর্ষক চেকবক্স নির্বাচন করুন ও <guibutton>বন্ধ করুন</guibutton> টিপে, মাউসের বাঁদিকের বাটনের পরিবর্তে ডানদিকের বাটনটিকে প্রধান বাটন রূপে নির্ধারণ করুন (এর ফলে মাউসটি বাঁ হাতে ব্যবহারের জন্য সুবিধাজনক হবে)। </para> <para> <application>gedit</application> ফাইলের মধ্যে কোনো বিশেষ অক্ষর অন্তর্ভুক্ত করা জন্য প্রধান মেনু বার থেকে <guimenu>অ্যাপ্লিকেশন তালিকা > আনুষঙ্গিক > অক্ষরের ম্যাপ</guimenu> নির্বাচন করুন। এর পরে <application>অক্ষরের ম্যাপ</application>-র প্রধান মেনু থেকে <guimenu>অনুসন্ধান > Find&hellip;</guimenu> নির্বাচন করুন ও <guilabel>অনুসন্ধান</guilabel> শীর্ষক ক্ষেত্রের মধ্যে প্রয়েজনীয় অক্ষরটি লিখে <guibutton>পরবর্তী</guibutton> শীর্ষক বাটন ক্লিক করুন। অনুসন্ধান করা অক্ষরটি <guilabel>অক্ষরের টেবিল</guilabel>-এ উজ্জ্বলিত করা হবে। উজ্জ্বলিত অক্ষরটি দুইবার ক্লিক করে "
+"classname> ফাইলের জন্য, এবং <classname>dir</classname> ডিরেক্টরির জন্য। প্রতিটি ক্লাসের ক্ষেত্রে প্রযোজ্য অনুমতি নির্ধারিত রয়েছে। </para> </blockquote> <para> <application>আপেক্ষিক বোল্ড</application> </para> <para> এই বিন্যাস দ্বারা সিস্টেমের মধ্যে প্রাপ্ত শব্দ অথবা পংক্তি যেমন অ্যাপ্লিকেশনের নাম; ডায়লগ বক্সের লেখা; লেবেল করা বাটন; চেক-বক্স ও রেডিও-বাটনের লেবেল; মেনু ও সাব-মেনুর শিরোনাম প্রভৃতি উল্লেখ করা হয়। উদাহরণস্বরূপ: </para> <blockquote> <para> <application>মাউস সম্পর্কিত পছন্দ</application> আরম্ভ করার জন্য প্রধান মেনু বার থেকে <guimenu>সিস্টেম > পছন্দ > মাউস</guimenu> নির্বাচন করুন। <guilabel>বাটন</guilabel> ট্যাবের মধ্যে <guilabel>বাঁহাতি মাউস</guilabel> শীর্ষক চেকবক্স নির্বাচন করুন ও <guibutton>বন্ধ করুন</guibutton> টিপে, মাউসের বাঁদিকের বাটনের পরিবর্তে ডানদিকের বাটনটিকে প্রধান বাটন রূপে নির্ধারণ করুন (এর ফলে মাউসটি বাঁ হাতে ব্যবহারের জন্য সুবিধাজনক হবে)। </para> <para> <application>gedit</application> ফাইলের মধ্যে কোনো বিশেষ অক্ষর অন্তর্ভুক্ত করা জন্য প্রধান মেনু বার থেকে <guimenu>অ্যাপ্লিকেশন তালিকা > আনুষঙ্গিক > অক্ষরের ম্যাপ</guimenu> নির্বাচন করুন। এর পরে <application>অক্ষরের ম্যাপ</application>-র প্রধান মেনু থেকে <guimenu>অনুসন্ধান > অনুসন্ধান&hellip;</guimenu> নির্বাচন করুন ও <guilabel>অনুসন্ধান</guilabel> শীর্ষক ক্ষেত্রের মধ্যে প্রয়েজনীয় অক্ষরটি লিখে <guibutton>পরবর্তী</guibutton> শীর্ষক বাটন ক্লিক করুন। অনুসন্ধান করা অক্ষরটি <guilabel>অক্ষরের টেবিল</guilabel>-এ উজ্জ্বলিত করা হবে। উজ্জ্বলিত অক্ষরটি দুইবার ক্লিক করে "
 "<guilabel>কপি করার জন্য চিহ্নিত বিষয়বস্তু</guilabel> ক্ষেত্রে স্থাপন করে <guibutton>কপি করুন</"
 "guibutton> শীর্ষক বাটনটি ক্লিক করুন। এর পরে, এডিটরে প্রত্যাবর্তন করে <application>gedit</application>-র মেনু বার থেকে <guimenu>সম্পাদনা > পেস্ট করুন</guimenu> নির্বাচন করুন। </para> </blockquote> <para> উপরোক্ত অংশে রয়েছে অ্যাপ্লিকেশনের নাম; সিস্টেমের মেনু ও মেনুর বস্তুর নাম; অ্যাপ্লিকেশনের মেনুর নাম; ও GUI প্রেক্ষাপটে প্রদর্শিত বাটন ও টেক্সট। এই সমস্ত বস্তু আপেক্ষিক বোল্ড বিন্যাসে প্রদর্শিত হয়েছে ও সহজেই পৃথকরূপে সনাক্ত করা যাবে। </para> <para> মেনু ও সাব-মেনুর মধ্যে চলাচলের জন্য <guimenu>></guimenu> চিহ্ন প্রয়োগ করা হয়েছে। তূলনামূলকভাবে কঠিন নির্দেশাবলী পরিবর্তে এই প্রণালী ব্যবহার করা হয়েছে, যেমন 'প্রধান মেনু বারের মধ্যে <guimenu>সিস্টেম</guimenu> মেনুর মধ্যে উপস্থিত <guimenu>পছন্দ</guimenu> সাব-মেনু থেকে <guimenuitem>মাউস</guimenuitem> নির্বাচন করুন'। </para> <para> <command><replaceable>মোনো-স্পেস্ড বোল্ড আইটালিক</replaceable></command> অথবা <application><replaceable>আপেক্ষিক বোল্ড আইটালিক</replaceable></"
 "application> </para> <para> স্পেস্ড অথবা আপেক্ষিক বোল্ড নির্বিশেষে,আইটালিক দ্বারা চিহ্নিত লেখাগুলি পরিবর্তনযোগ্য মান নির্দেশ করে অর্থাৎ চিহ্নিত লেখাগুলি লেখা অথবা প্রদর্শন করা হবে না ও পরিস্থিতি অনুযায়ী পরিবর্তন করা হবে। উদাহরণস্বরূপ: </para> <blockquote> <para>  ssh সহযোগে কোনো দূরবর্তী মেশিনের সাথে সংযোগ স্থাপনের জন্য, শেল প্রম্পটে <command>ssh <replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
@@ -176,7 +176,7 @@ msgstr ""
 #: Conventions.xml:132
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr ""
+msgstr "বিশেষ দ্রষ্টব্য সংক্রান্ত নিয়মাবলী"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -184,7 +184,7 @@ msgstr ""
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "একাধিক পংক্তি বিশিষ্ট দুটি ডাটা-টাইপ, পার্শবর্তী লেখার থেকে ভিন্ন রূপে প্রদর্শন করা হয়।"
 
 #. Tag: para
 #: Conventions.xml:138
