--- a/publican/content/docs/de-DE/Introduction.po
+++ b/publican/content/docs/de-DE/Introduction.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-08-20 06:04+0000\n"
+"POT-Creation-Date: 2008-10-15 05:51+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -91,7 +91,10 @@ msgstr ""
 #: Introduction.xml:29
 #, no-c-format
 msgid ""
-"If there is sufficient demand to add conditions or over-ride this and other "
-"choices designed to improve and maintain the published standard of material, "
-"we will consider requests to add such functionality."
+"Entities also present an essentially insurmountable obstacle to quality "
+"translation (see <xref linkend=\"sect-Publican-Files_in_the_Book_directory-"
+"Book_Name.ent\"/>). Consequently, while we are not reducing the "
+"<filename><replaceable>Book_Name</replaceable>.ent</filename> file's "
+"functionality, we are no longer considering requests to add functionality or "
+"features associated with Entity use."
 msgstr ""
