--- a/publican/content/docs/de-DE/Conditionaltagging.po
+++ b/publican/content/docs/de-DE/Conditionaltagging.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-16 02:10+0000\n"
+"POT-Creation-Date: 2008-11-17 03:11+0000\n"
 "PO-Revision-Date: 2008-10-16 02:10+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -49,7 +49,7 @@ msgid ""
 "\"beta\" version:"
 msgstr ""
 
-#. Tag: screen
+#. Tag: programlisting
 #: Conditionaltagging.xml:14
 #, no-c-format
 msgid ""
