--- a/publican/content/docs/de-DE/Using_Publican.po
+++ b/publican/content/docs/de-DE/Using_Publican.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-15 05:51+0000\n"
+"POT-Creation-Date: 2008-11-17 03:11+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -466,7 +466,7 @@ msgstr ""
 #, no-c-format
 msgid ""
 "Data from seven of the default tags in <filename>Book_Info.xml</filename> is "
-"required to build books as RPMs. Most immediately, the filename of a book "
+"required to build books as RPMs. Most immediately, the file name of a book "
 "built as an RPM is constructed as follows: "
 "<filename><replaceable>productname</replaceable>-<replaceable>title</"
 "replaceable>-<replaceable>productnumber</replaceable>-<replaceable>language</"
@@ -833,7 +833,7 @@ msgstr ""
 #: Using_Publican.xml:378
 #, no-c-format
 msgid ""
-"<filename>Author_Group.xml</filename> is not requred but is the standard "
+"<filename>Author_Group.xml</filename> is not required but is the standard "
 "place to record author, editor, artist and other credit details. The "
 "following is an example <filename>Author_Group.xml</filename> file:"
 msgstr ""
@@ -1097,52 +1097,58 @@ msgstr ""
 msgid ""
 "<blockquote> <para> As noted in the <emphasis>Liberty Installation and "
 "Formatting Tome</emphasis>, Chapter 3&hellip; </para> </blockquote> <para> A "
-"translation of this might be as follows: </para> <blockquote> <para> Wie in "
-"dem <emphasis>W&auml;lzer f&uuml;r die Installation und Formatierung von "
-"Liberty</emphasis>, Kapitel 3, erw&auml;hnt&hellip; </para> </blockquote> "
-"<para> Because there is no text missing, the title can be translated into "
-"elegant German, avoiding the multi-syllabic mega-word syndrome. Also, note "
-"the use of &lsquo;in dem&rsquo;, the correct pronoun when referring to a "
-"W&auml;lzer (tome). </para> <para> By contrast, if entities are used, the "
-"English would be </para> <blockquote> <para> As noted in the <sgmltag>&amp;"
-"LIFT&semi;</sgmltag>, Chapter 3&hellip; </para> </blockquote> <para> The "
-"translation of this would probably run thus: </para> <blockquote> <para> Wie "
-"in <sgmltag>&amp;LIFT&semi;</sgmltag>, Kapitel 3, erw&auml;hnt&hellip; </"
+"translation of this might be as follows: </para> <blockquote> <para> "
+"<foreignphrase>Wie in dem <emphasis>W&auml;lzer f&uuml;r die Installation "
+"und Formatierung von Liberty</emphasis>, Kapitel 3, erw&auml;hnt&hellip;</"
+"foreignphrase> </para> </blockquote> <para> Because there is no text "
+"missing, the title can be translated into elegant German, avoiding the multi-"
+"syllabic mega-word syndrome. Also, note the use of <foreignphrase>&lsquo;in "
+"dem&rsquo;</foreignphrase>, the correct pronoun when referring to a "
+"<foreignphrase>W&auml;lzer</foreignphrase> (tome). </para> <para> By "
+"contrast, if entities are used, the English would be </para> <blockquote> "
+"<para> As noted in the <sgmltag>&amp;LIFT&semi;</sgmltag>, Chapter 3&hellip; "
+"</para> </blockquote> <para> The translation of this would probably run "
+"thus: </para> <blockquote> <para> <foreignphrase>Wie in <sgmltag>&amp;"
+"LIFT&semi;</sgmltag>, Kapitel 3, erw&auml;hnt&hellip;</foreignphrase> </"
 "para> </blockquote> <para> And the presentation would be thus: </para> "
-"<blockquote> <para> Wie in <emphasis>Liberty Installation and Formatting "
-"Tome</emphasis>, Kapitel 3, erw&auml;hnt&hellip; </para> </blockquote> "
-"<para> This, of course, leaves the title in English, including words like "
-"Tome and Formatting that are unlikely to be understood. Also, the translator "
-"is forced to use the pronoun &lsquo;in&rsquo;, a more general construction "
-"that comes close to Denglisch or Angleutsch. Many German speakers consider "
-"this approach incorrect and almost all consider it inelegant. </para> <para> "
-"Equivalent problems emerge with a fragment such as this: </para> "
-"<blockquote> <para> However, a careful reading of the <emphasis>Liberty "
-"Installation and Formatting Tome</emphasis> afterword, shows that&hellip; </"
-"para> </blockquote> <para> With no text hidden behind an entity, a German "
-"translation of this might be: </para> <blockquote> <para> Jedoch ergibt ein "
-"sorgf&auml;ltiges Lesen des Nachworts f&uuml;r den <emphasis>W&auml;lzer "
-"f&uuml;r die Installation und Formatierung von Liberty</emphasis>, "
-"dass&hellip; </para> </blockquote> <para> If an entity was used to save the "
-"writer time, the translator has to deal with this: </para> <blockquote> "
-"<para> However, a careful reading of the <sgmltag>&amp;LIFT&semi;</sgmltag> "
-"afterword, shows that&hellip; </para> </blockquote> <para> And the "
-"translation would be subtly but importantly different: </para> <blockquote> "
-"<para> Jedoch ergibt ein sorgf&auml;ltiges Lesen des Nachworts f&uuml;r "
-"<sgmltag>&amp;LIFT&semi;</sgmltag>, dass&hellip; </para> </blockquote> "
-"<para> When presented to a reader, this would appear as follows: </para> "
-"<blockquote> <para> Jedoch ergibt ein sorgf&auml;ltiges Lesen des Nachworts "
-"f&uuml;r <emphasis>Liberty Installation and Formatting Tome</emphasis>, "
-"dass&hellip; </para> </blockquote>"
+"<blockquote> <para> <foreignphrase>Wie in <emphasis>Liberty Installation and "
+"Formatting Tome</emphasis>, Kapitel 3, erw&auml;hnt&hellip;</foreignphrase> "
+"</para> </blockquote> <para> This, of course, leaves the title in English, "
+"including words like Tome and Formatting that are unlikely to be understood. "
+"Also, the translator is forced to use the pronoun &lsquo;in&rsquo;, a more "
+"general construction that comes close to <foreignphrase>Denglisch or "
+"Angleutsch</foreignphrase>. Many German speakers consider this approach "
+"incorrect and almost all consider it inelegant. </para> <para> Equivalent "
+"problems emerge with a fragment such as this: </para> <blockquote> <para> "
+"However, a careful reading of the <emphasis>Liberty Installation and "
+"Formatting Tome</emphasis> afterword, shows that&hellip; </para> </"
+"blockquote> <para> With no text hidden behind an entity, a German "
+"translation of this might be: </para> <blockquote> <para> "
+"<foreignphrase>Jedoch ergibt ein sorgf&auml;ltiges Lesen des Nachworts "
+"f&uuml;r den <emphasis>W&auml;lzer f&uuml;r die Installation und "
+"Formatierung von Liberty</emphasis>, dass&hellip;</foreignphrase> </para> </"
+"blockquote> <para> If an entity was used to save the writer time, the "
+"translator has to deal with this: </para> <blockquote> <para> However, a "
+"careful reading of the <sgmltag>&amp;LIFT&semi;</sgmltag> afterword, shows "
+"that&hellip; </para> </blockquote> <para> And the translation would be "
+"subtly but importantly different: </para> <blockquote> <para> "
+"<foreignphrase>Jedoch ergibt ein sorgf&auml;ltiges Lesen des Nachworts "
+"f&uuml;r <sgmltag>&amp;LIFT&semi;</sgmltag>, dass&hellip;</foreignphrase> </"
+"para> </blockquote> <para> When presented to a reader, this would appear as "
+"follows: </para> <blockquote> <para> <foreignphrase>Jedoch ergibt ein "
+"sorgf&auml;ltiges Lesen des Nachworts f&uuml;r <emphasis>Liberty "
+"Installation and Formatting Tome</emphasis>, dass&hellip;</foreignphrase> </"
+"para> </blockquote>"
 msgstr ""
 
 #. Tag: para
 #: Using_Publican.xml:566
 #, no-c-format
 msgid ""
-"Again, note the missing pronoun, &lsquo;den&rsquo;. This is inelegant but "
-"necessary since the translator can otherwise only guess which pronoun (der, "
-"die or das) to use, which would inevitably lead to error."
+"Again, note the missing pronoun, <foreignphrase>&lsquo;den&rsquo;</"
+"foreignphrase>. This is inelegant but necessary since the translator can "
+"otherwise only guess which pronoun <foreignphrase>(der, die or das)</"
+"foreignphrase> to use, which would inevitably lead to error."
 msgstr ""
 
 #. Tag: para
@@ -1201,7 +1207,7 @@ msgid ""
 "that inserts the <filename>testimage.png</filename> image:"
 msgstr ""
 
-#. Tag: screen
+#. Tag: programlisting
 #: Using_Publican.xml:599
 #, no-c-format
 msgid ""
