update pot files
git-svn-id: file:///srv/svn/publican/trunk@591 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/docs/pot/Author_Group.pot
+++ b/publican/content/docs/pot/Author_Group.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-11-17 03:14+0000\n"
+"POT-Creation-Date: 2008-12-01 21:39+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -27,9 +27,9 @@ msgstr ""
 #: Author_Group.xml:15
 #, no-c-format
 msgid ""
-"<firstname>Joshua</firstname> <surname>Oakes</surname> <affiliation> "
-"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
-"affiliation> <email>joakes@redhat.com</email>"
+"<author><firstname>Brian</firstname> <surname>Fort&eacute;</surname> "
+"<affiliation> <orgname>Red Hat</orgname> <orgdiv>Engineering Content "
+"Services</orgdiv> </affiliation> <email>bforte@redhat.com</email></author>"
 msgstr ""
 
 #. Tag: author
@@ -45,28 +45,37 @@ msgstr ""
 #: Author_Group.xml:33
 #, no-c-format
 msgid ""
+"<firstname>Joshua</firstname> <surname>Oakes</surname> <affiliation> "
+"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
+"affiliation> <email>joakes@redhat.com</email>"
+msgstr ""
+
+#. Tag: author
+#: Author_Group.xml:42
+#, no-c-format
+msgid ""
 "<firstname>Joshua</firstname> <surname>Wulf</surname> <affiliation> "
 "<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
 "affiliation> <email>jwulf@redhat.com</email>"
 msgstr ""
 
 #. Tag: editor
-#: Author_Group.xml:42
+#: Author_Group.xml:51
 #, no-c-format
 msgid ""
-"<firstname>Brian</firstname> <surname>Fort&eacute;</surname> <affiliation> "
-"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
-"affiliation> <email>bforte@redhat.com</email>"
+"<editor><firstname>Brian</firstname> <surname>Fort&eacute;</surname> "
+"<affiliation> <orgname>Red Hat</orgname> <orgdiv>Engineering Content "
+"Services</orgdiv> </affiliation> <email>bforte@redhat.com</email></editor>"
 msgstr ""
 
 #. Tag: othercredit
-#: Author_Group.xml:51
+#: Author_Group.xml:60
 #, no-c-format
 msgid ""
 "<firstname>Jeff</firstname> <surname>Fearn</surname> <affiliation> "
 "<shortaffil> <inlinemediaobject> <imageobject> <imagedata fileref=\"images/"
 "engops.png\" format=\"PNG\"/> </imageobject> <textobject> <phrase>Red Hat, "
 "Engineering Operations Logo</phrase> </textobject> </inlinemediaobject> </"
-"shortaffil> </affiliation> <contrib>Extensive review and rough drafts.</"
-"contrib> <email>jfearn@redhat.com</email>"
+"shortaffil> </affiliation> <contrib>Extensive review, rough drafts, "
+"persistent annoyances.</contrib> <email>jfearn@redhat.com</email>"
 msgstr ""
