--- a/publican/content/docs/pot/Using_Publican.pot
+++ b/publican/content/docs/pot/Using_Publican.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-11-17 03:14+0000\n"
+"POT-Creation-Date: 2008-12-01 21:39+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -535,7 +535,7 @@ msgstr ""
 #. Tag: title
 #: Using_Publican.xml:235 Using_Publican.xml:249 Using_Publican.xml:274
 #: Using_Publican.xml:294 Using_Publican.xml:308 Using_Publican.xml:421
-#: Using_Publican.xml:444 Using_Publican.xml:581
+#: Using_Publican.xml:444 Using_Publican.xml:581 Using_Publican.xml:744
 #, no-c-format
 msgid "Important"
 msgstr ""
@@ -768,7 +768,7 @@ msgstr ""
 #, no-c-format
 msgid ""
 "The edition and pubsnumber are not tied to the <parameter>&lt;"
-"productnumer&gt;</parameter> tag also found in Book_Info.xml: productnumber "
+"productnumber&gt;</parameter> tag also found in Book_Info.xml: productnumber "
 "denotes the version number of the product being documented or otherwise "
 "written about."
 msgstr ""
@@ -1498,4 +1498,196 @@ msgstr ""
 msgid ""
 "As well, running <command>make clean_ids</command> removes all comments from "
 "the xml source."
+msgstr ""
+
+#. Tag: title
+#: Using_Publican.xml:712
+#, no-c-format
+msgid "Pre-release software and draft documentation"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:714
+#, no-c-format
+msgid ""
+"Completed documentation for pre-release software is not the same thing as "
+"draft documentation."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:716
+#, no-c-format
+msgid ""
+"Drafts are unfinished versions of a book or article, and their unfinished "
+"state is unrelated to the status of the software they document."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:718
+#, no-c-format
+msgid ""
+"In both circumstances, however, it is important to make the status of the "
+"software, documentation or both clear to users, developers, readers and "
+"reviewers."
+msgstr ""
+
+#. Tag: title
+#: Using_Publican.xml:721
+#, no-c-format
+msgid "Denoting pre-release software"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:723
+#, no-c-format
+msgid ""
+"Documentation for pre-release software, especially pre-release software "
+"being distributed to testers, customers and partners, should carry a clear "
+"mark denoting the beta-status of the software."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:725
+#, no-c-format
+msgid "To create that mark do the following:"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:729
+#, no-c-format
+msgid ""
+"Add the software's pre-release version number, or equivalent state "
+"information, to the subtitle in your <filename>Book_Info.xml</filename> "
+"file. Place this additional text in <sgmltag>&lt;remark&gt;</sgmltag> tags. "
+"For example:"
+msgstr ""
+
+#. Tag: programlisting
+#: Using_Publican.xml:730
+#, no-c-format
+msgid ""
+"&lt;subtitle&gt;Using Red Hat Enterprise Warp Drive&lt;remark&gt; Version "
+"1.1, Beta 2&lt;/remark&gt;&lt;/subtitle&gt;"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:734
+#, no-c-format
+msgid ""
+"add <varname>SHOW_REMARKS</varname> to the <filename>Makefile</filename> and "
+"set it to '1':"
+msgstr ""
+
+#. Tag: programlisting
+#: Using_Publican.xml:735
+#, no-c-format
+msgid "SHOW_REMARKS = 1"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:739
+#, no-c-format
+msgid ""
+"When your book is built with this text and setting, the software's status is "
+"displayed in clear and unmistakable fashion. PDF builds display the remark "
+"on their cover and title pages. HTML builds (both html and html-single) "
+"display the remark near the beginning of index.html"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:741
+#, no-c-format
+msgid ""
+"Because this approach makes no changes to the information in "
+"<filename>Book_Info.xml</filename> used to generate RPMs, it also ensures "
+"there is no ambiguity in the RPM subsystem's operation."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:745
+#, no-c-format
+msgid ""
+"It is the writer's responsibility to remove the <sgmltag>&lt;remark&gt;</"
+"sgmltag> tag and its contents and remove or turn off <varname>SHOW_REMARKS</"
+"varname> when documentation is updated for use with the release version of "
+"the software."
+msgstr ""
+
+#. Tag: title
+#: Using_Publican.xml:752
+#, no-c-format
+msgid "Denoting draft documentation"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:754
+#, no-c-format
+msgid ""
+"Unfinished documentation made available to others for review should be "
+"labeled clearly as such."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:758
+#, no-c-format
+msgid ""
+"To add the draft watermark to your documentation add the <userinput>status="
+"\"draft\"</userinput> attribute to the <sgmltag>&lt;article&gt;</sgmltag>, "
+"<sgmltag>&lt;book&gt;</sgmltag> or <sgmltag>&lt;set&gt;</sgmltag> tag in "
+"your document's root node. For example:"
+msgstr ""
+
+#. Tag: programlisting
+#: Using_Publican.xml:759
+#, no-c-format
+msgid "&lt;book status=\"draft\"&gt;"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:763
+#, no-c-format
+msgid ""
+"By default, your root node is the <sgmltag>&lt;book&gt;</sgmltag> tag in "
+"your <filename><replaceable>[book_name]</replaceable>.xml</filename> file."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:765
+#, no-c-format
+msgid ""
+"If you are working on an article or set, the root node is the <sgmltag>&lt;"
+"article&gt;</sgmltag> or <sgmltag>&lt;set&gt;</sgmltag> tag in "
+"<filename><replaceable>[book_name]</replaceable>.xml</filename>."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:767
+#, no-c-format
+msgid ""
+"Adding the <userinput>status=\"draft\"</userinput> attribute causes each "
+"page of the document to show the draft watermark. This is by design."
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:769
+#, no-c-format
+msgid ""
+"Even if you change only a portion of a work before sending it out for "
+"review, marking every page as draft will encourage reviewers to report "
+"errors or typos they spot in passing. It will also ensure non-reviewers who "
+"encounter the work do not mistake a draft for a finished version."
+msgstr ""
+
+#. Tag: title
+#: Using_Publican.xml:773
+#, no-c-format
+msgid "Denoting draft documentation of pre-release software"
+msgstr ""
+
+#. Tag: para
+#: Using_Publican.xml:775
+#, no-c-format
+msgid ""
+"To denote unfinished documentation of pre-release software properly simply "
+"do both previously noted procedures."
 msgstr ""
