--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,4 +1,7 @@
+* Mon Mar 2 2009 Richard van der Luit <zuma@xs4all.nl>
+- Translate Document Conventions into Dutch
+
 * Sat Feb 28 2009 Rui Gouveia <rui.gouveia@globaltek.pt>
-- Translate Fedora Feedback into European Portuguese
+- Translate Document Conventions into European Portuguese
 
 
