Updates to Dutch translations
git-svn-id: file:///srv/svn/publican/trunk@650 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+* Wed Mar 4 2009 Richard van der Luit <zuma@xs4all.nl>
+- Corrections to Fedora Feedback in Dutch
+
 * Sat Feb 28 2009 Rui Gouveia <rui.gouveia@globaltek.pt>
 - Translate Fedora Feedback into European Portuguese
 
