--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+* Wed Mar 4 2009 Richard van der Luit <zuma@xs4all.nl>
+- Corrections to Document Conventions in Dutch
+
 * Mon Mar 2 2009 Richard van der Luit <zuma@xs4all.nl>
 - Translate Document Conventions into Dutch
 
