--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,7 @@
+* Wed Mar 4 2009 Miloš Komarčević <kmilos@gmail.com>
+- Translate Fedora Feedback into Serbian
+- Translate Fedora Feedback into Serbian (Latin)
+
 * Wed Mar 4 2009 Richard van der Luit <zuma@xs4all.nl>
 - Corrections to Fedora Feedback in Dutch
 
