--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+* Thu Mar 5 2009 Piotr Drąg <piotrdrag@gmail.com>
+- Translate common Feedback section into Polish
+
 * Wed Mar 4 2009 Richard van der Luit <zuma@xs4all.nl>
 - Corrections to Document Conventions in Dutch
 
