Reinstate blockquote tags for Polish Document Conventions; Update CHANGES files for Common Content and Fedora Brand
git-svn-id: file:///srv/svn/publican/trunk@659 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+* Fri Mar 6 2009 Piotr Drąg <piotrdrag@gmail.com>
+- Translate Document Conventions into Polish
+
 * Thu Mar 5 2009 Piotr Drąg <piotrdrag@gmail.com>
 - Translate common Feedback section into Polish
 
