--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+* Fri Mar 6 2009 Piotr Drąg <piotrdrag@gmail.com>
+- Translate Fedora Feedback into Polish
+
 * Wed Mar 4 2009 Miloš Komarčević <kmilos@gmail.com>
 - Translate Fedora Feedback into Serbian
 - Translate Fedora Feedback into Serbian (Latin)
