--- a/publican/content/docs/de-DE/FAQ.po
+++ b/publican/content/docs/de-DE/FAQ.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-15 05:51+0000\n"
+"POT-Creation-Date: 2009-03-03 05:14+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -14,34 +14,29 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
-#: FAQ.xml:6
 #, no-c-format
 msgid "Frequently Asked Questions"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:10
 #, no-c-format
 msgid "How do I add a language to my book?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:15
 #, no-c-format
 msgid ""
-"Edit your book's <filename>Makefile</filename> and uncomment the "
+"Edit your book&#39;s <filename>Makefile</filename> and uncomment the "
 "<computeroutput>OTHER_LANGS</computeroutput> entry. Add the required "
 "language code after the &#39;=&#39; sign."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:22
 #, no-c-format
 msgid "How do I add another language to my book?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:27
 #, no-c-format
 msgid ""
 "Append the language to <computeroutput>OTHER_LANGS</computeroutput> in the "
@@ -52,7 +47,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:34
 #, no-c-format
 msgid ""
 "What if I only use the country code? For example, "
@@ -60,37 +54,31 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:39
 #, no-c-format
 msgid "Run the <command>make update-po-en</command> command."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:46
 #, no-c-format
 msgid "How do I update all po files?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:51
 #, no-c-format
 msgid "Run the <command>make update-po-all</command> command."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:58
 #, no-c-format
 msgid "Where can I get a complete list of make targets?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:63
 #, no-c-format
 msgid "Run the <command>make help</command> command."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:70
 #, no-c-format
 msgid ""
 "Where can I get a complete list of parameters that can be set in the "
@@ -98,32 +86,27 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:75
 #, no-c-format
 msgid "Run the <command>make help_params</command> command."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:82
 #, no-c-format
 msgid "Where are the Publican common files located?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:87
 #, no-c-format
 msgid "By default, they are in <filename>/usr/share/publican/</filename>."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:94
 #, no-c-format
 msgid ""
 "Can I use the OASIS DocBook DTD for XML completion in editors such as Kate?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:99
 #, no-c-format
 msgid ""
 "Yes. The OASIS DocBook DTD is included in the publican package, and is "
@@ -131,7 +114,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:106
 #, no-c-format
 msgid ""
 "I have extensive code samples for my book, how can I include them without "
@@ -139,7 +121,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:111
 #, no-c-format
 msgid ""
 "The best way to do this is to create a directory named <filename>extras</"
@@ -148,44 +129,37 @@ msgid ""
 msgstr ""
 
 #. Tag: title
-#: FAQ.xml:115
 #, no-c-format
 msgid "Including code samples"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:117
 #, no-c-format
 msgid "Create the extras directory"
 msgstr ""
 
 #. Tag: programlisting
-#: FAQ.xml:119
 #, no-c-format
 msgid "<command>mkdir <filename>en-US/extras</filename></command>"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:123
 #, no-c-format
 msgid "Copy the code file to the extras directory"
 msgstr ""
 
 #. Tag: programlisting
-#: FAQ.xml:125
 #, no-c-format
 msgid ""
 "<command>cp <filename>~/samples/foo.c en-US/extras/.</filename></command>"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:129
 #, no-c-format
 msgid "<sgmltag>xi:include</sgmltag> the sample file in your xml file"
 msgstr ""
 
 #. Tag: programlisting
-#: FAQ.xml:131
 #, no-c-format
 msgid ""
 "&lt;programlisting&gt;\n"
@@ -195,7 +169,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:135
 #, no-c-format
 msgid ""
 "You can now edit <filename>en-US/extras/foo.c</filename> in your favorite "
@@ -203,13 +176,11 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:145
 #, no-c-format
 msgid "Is it possible to include arbitrary files in tar and RPM files?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:150
 #, no-c-format
 msgid ""
 "Yes. If you make a directory named <filename>files</filename> in your source "
@@ -218,13 +189,11 @@ msgid ""
 msgstr ""
 
 #. Tag: title
-#: FAQ.xml:154
 #, no-c-format
 msgid "Important"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:155
 #, no-c-format
 msgid ""
 "The <filename>files</filename> directory will not be available during the "
@@ -233,13 +202,11 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:163
 #, no-c-format
 msgid "Why does publican give me warnings about unknown tags?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:168
 #, no-c-format
 msgid ""
 "This warning informs you that you are using a tag whose output has not been "
@@ -248,25 +215,21 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:175
 #, no-c-format
 msgid "How do I find out which tags have been tested in publican?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:180
 #, no-c-format
 msgid "Run <command>xmlClean --known</command>"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:187
 #, no-c-format
 msgid "Why does publican give me an error about banned tags?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:192
 #, no-c-format
 msgid ""
 "This error indicates that the brand you are using has STRICT mode enabled "
@@ -276,31 +239,26 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:199
 #, no-c-format
 msgid "How do I find out which tags are banned in publican?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:204
 #, no-c-format
 msgid "Run <command>xmlClean --banned</command>"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:211
 #, no-c-format
 msgid "Which brands enable STRICT mode?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:216
 #, no-c-format
 msgid "Currently the Red Hat and JBoss brands enable STRICT mode."
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:223
 #, no-c-format
 msgid ""
 "I get an error saying Batik is not in the classpath but batik is installed! "
@@ -308,7 +266,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:228
 #, no-c-format
 msgid ""
 "We believe this is due to classpath issues caused by having different JRE "
@@ -317,7 +274,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:231
 #, no-c-format
 msgid ""
 "Sometimes this issue can be revealed by running <command>alternatives --"
@@ -327,7 +283,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:234
 #, no-c-format
 msgid ""
 "Some Java installs do not set-up the <command>alternatives</command> "
@@ -335,13 +290,29 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:241
+#, no-c-format
+msgid ""
+"I get an error <computeroutput>Exception in thread \"main\" java.lang."
+"OutOfMemoryError: Java heap space</computeroutput> when trying to build PDF. "
+"What is wrong?"
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid ""
+"The default memory allocated for Java is not big enough to build your PDF. "
+"You need to increase the memory allocated to FOP. Before running "
+"<command>make </command> run <command>echo \"FOP_OPTS=&#39;-Xms50m -"
+"Xmx700m&#39;\" &gt; ~/.foprc</command>. This sets the initial heap space to "
+"50MB and allows it to grow to a maximum of 700MB."
+msgstr ""
+
+#. Tag: para
 #, no-c-format
 msgid "Why does Jeff call Isaac Ivan?"
 msgstr ""
 
 #. Tag: para
-#: FAQ.xml:246
 #, no-c-format
-msgid "Because Jeff's memory is pants!"
+msgid "Because Jeff&#39;s memory is pants!"
 msgstr ""
