--- a/publican/content/docs/de-DE/Author_Group.po
+++ b/publican/content/docs/de-DE/Author_Group.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-11-17 03:14+0000\n"
+"POT-Creation-Date: 2009-03-03 05:14+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -14,7 +14,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: author
-#: Author_Group.xml:6
 #, no-c-format
 msgid ""
 "<firstname>Don</firstname> <surname>Domingo</surname> <affiliation> "
@@ -23,16 +22,14 @@ msgid ""
 msgstr ""
 
 #. Tag: author
-#: Author_Group.xml:15
 #, no-c-format
 msgid ""
-"<firstname>Joshua</firstname> <surname>Oakes</surname> <affiliation> "
-"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
-"affiliation> <email>joakes@redhat.com</email>"
+"<author><firstname>Brian</firstname> <surname>Fort&eacute;</surname> "
+"<affiliation> <orgname>Red Hat</orgname> <orgdiv>Engineering Content "
+"Services</orgdiv> </affiliation> <email>bforte@redhat.com</email></author>"
 msgstr ""
 
 #. Tag: author
-#: Author_Group.xml:24
 #, no-c-format
 msgid ""
 "<firstname>Murray</firstname> <surname>McAllister</surname> <affiliation> "
@@ -41,7 +38,14 @@ msgid ""
 msgstr ""
 
 #. Tag: author
-#: Author_Group.xml:33
+#, no-c-format
+msgid ""
+"<firstname>Joshua</firstname> <surname>Oakes</surname> <affiliation> "
+"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
+"affiliation> <email>joakes@redhat.com</email>"
+msgstr ""
+
+#. Tag: author
 #, no-c-format
 msgid ""
 "<firstname>Joshua</firstname> <surname>Wulf</surname> <affiliation> "
@@ -50,22 +54,20 @@ msgid ""
 msgstr ""
 
 #. Tag: editor
-#: Author_Group.xml:42
 #, no-c-format
 msgid ""
-"<firstname>Brian</firstname> <surname>Fort&eacute;</surname> <affiliation> "
-"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
-"affiliation> <email>bforte@redhat.com</email>"
+"<editor><firstname>Brian</firstname> <surname>Fort&eacute;</surname> "
+"<affiliation> <orgname>Red Hat</orgname> <orgdiv>Engineering Content "
+"Services</orgdiv> </affiliation> <email>bforte@redhat.com</email></editor>"
 msgstr ""
 
 #. Tag: othercredit
-#: Author_Group.xml:51
 #, no-c-format
 msgid ""
 "<firstname>Jeff</firstname> <surname>Fearn</surname> <affiliation> "
 "<shortaffil> <inlinemediaobject> <imageobject> <imagedata fileref=\"images/"
 "engops.png\" format=\"PNG\"/> </imageobject> <textobject> <phrase>Red Hat, "
 "Engineering Operations Logo</phrase> </textobject> </inlinemediaobject> </"
-"shortaffil> </affiliation> <contrib>Extensive review and rough drafts.</"
-"contrib> <email>jfearn@redhat.com</email>"
+"shortaffil> </affiliation> <contrib>Extensive review, rough drafts, "
+"persistent annoyances.</contrib> <email>jfearn@redhat.com</email>"
 msgstr ""
