--- a/publican/content/docs/de-DE/Branding.po
+++ b/publican/content/docs/de-DE/Branding.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-15 05:51+0000\n"
+"POT-Creation-Date: 2009-03-03 05:14+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -14,174 +14,140 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
-#: Branding.xml:6
 #, no-c-format
 msgid "Branding"
 msgstr ""
 
 #. Tag: para
-#: Branding.xml:7
 #, no-c-format
 msgid ""
-"Publican allows users to brand books by changing colors and logos. Publican "
-"ships with a default brand, common, and five other Brands. Each brand is "
-"distributed under a brand-specific license:"
+"Publican uses brands to apply a consistent look and style to html and pdf "
+"output. Brands are collections of files installed to <filename>/usr/share/"
+"publican/Common_Content/<replaceable>brand</replaceable>/</filename>. "
+"Publican ships with one brand, <filename>common/</filename>."
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid ""
+"Brands for JBoss, GIMP, Red Hat Enterprise Linux, Fedora and oVirt can be "
+"installed using <command>yum install publican-<replaceable>brand</"
+"replaceable></command>."
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid ""
+"Each currently available brand is distributed under a brand-specific license "
+"as follows:"
 msgstr ""
 
 #. Tag: title
-#: Branding.xml:11
 #, no-c-format
 msgid "Current Brands and their packages"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:19
 #, no-c-format
 msgid "Brand"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:22
 #, no-c-format
 msgid "License"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:25
 #, no-c-format
 msgid "Package"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:28
 #, no-c-format
 msgid "Comment"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:35
 #, no-c-format
 msgid "common"
 msgstr ""
 
 #. Tag: ulink
-#: Branding.xml:39 Branding.xml:109
 #, no-c-format
 msgid "GFDL Version 1.2"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:41
 #, no-c-format
 msgid "publican"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:44 Branding.xml:114
 #, no-c-format
 msgid "GPL compatible license. No options."
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:49
 #, no-c-format
 msgid "RedHat"
 msgstr ""
 
-#. Tag: entry
-#: Branding.xml:52
-#, no-c-format
-msgid ""
-"<ulink url=\"http://www.opencontent.org/openpub/\">OPL 1.0</ulink> + "
-"Restrictions"
-msgstr ""
-
-#. Tag: entry
-#: Branding.xml:55
-#, no-c-format
-msgid "publican-redhat"
-msgstr ""
-
-#. Tag: entry
-#: Branding.xml:58
-#, no-c-format
-msgid "No substantively modified versions, No commercial purposes."
-msgstr ""
-
-#. Tag: entry
-#: Branding.xml:63
-#, no-c-format
-msgid "Fedora"
-msgstr ""
-
 #. Tag: ulink
-#: Branding.xml:67 Branding.xml:95
 #, no-c-format
 msgid "OPL 1.0"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:69
 #, no-c-format
-msgid "publican-fedora"
+msgid "publican-redhat"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:72 Branding.xml:100
 #, no-c-format
 msgid "No Options."
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:77
+#, no-c-format
+msgid "Fedora"
+msgstr ""
+
+#. Tag: entry
+#, no-c-format
+msgid "publican-fedora"
+msgstr ""
+
+#. Tag: entry
 #, no-c-format
 msgid "JBoss"
 msgstr ""
 
-#. Tag: ulink
-#: Branding.xml:81
-#, no-c-format
-msgid "CC A-N-SA 3.0"
-msgstr ""
-
 #. Tag: entry
-#: Branding.xml:83
 #, no-c-format
 msgid "publican-jboss"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:86
-#, no-c-format
-msgid "Attribution, Noncommercial, Share Alike."
-msgstr ""
-
-#. Tag: entry
-#: Branding.xml:91
 #, no-c-format
 msgid "oVirt"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:97
 #, no-c-format
 msgid "publican-ovirt"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:105
 #, no-c-format
 msgid "GIMP"
 msgstr ""
 
 #. Tag: entry
-#: Branding.xml:111
 #, no-c-format
 msgid "publican-gimp"
 msgstr ""
 
 #. Tag: para
-#: Branding.xml:121
 #, no-c-format
 msgid ""
 "To make a custom brand, use the brand with the license you wish to use as "
