--- a/publican/content/docs/de-DE/Introduction.po
+++ b/publican/content/docs/de-DE/Introduction.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-15 05:51+0000\n"
+"POT-Creation-Date: 2009-03-03 05:14+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -14,13 +14,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
-#: Introduction.xml:6
 #, no-c-format
 msgid "Introduction"
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:7
 #, no-c-format
 msgid ""
 "Publican is a tool for publishing material authored in DocBook XML. This "
@@ -31,22 +29,19 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:10
 #, no-c-format
 msgid ""
-"Publican began life as an internal tool used by Red Hat's Documentation "
+"Publican began life as an internal tool used by Red Hat&#39;s Documentation "
 "Group (now known as Engineering Content Services). On occasion, this legacy "
 "is visible."
 msgstr ""
 
 #. Tag: title
-#: Introduction.xml:14
 #, no-c-format
 msgid "Design"
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:15
 #, no-c-format
 msgid ""
 "Publican is a publication system, not just a DocBook processing tool. As "
@@ -55,7 +50,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:19
 #, no-c-format
 msgid ""
 "The Branding functionality allows you to create your own presentation rules "
@@ -64,7 +58,6 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:23
 #, no-c-format
 msgid ""
 "Entities, for example, can be validly defined in any XML file. However, to "
@@ -73,11 +66,11 @@ msgid ""
 "article. Consequently, all entities declared in all XML files are lost. "
 "Publican, therefore, requires you define Entities in the "
 "<filename><replaceable>Book_Name</replaceable>.ent</filename> file (see "
-"<xref linkend=\"sect-Publican-Files_in_the_Book_directory-Book_Name.ent\"/>)."
+"<xref linkend=\"sect-Users_Guide-Files_in_the_Book_directory-Book_Name.ent\"/"
+">)."
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:26
 #, no-c-format
 msgid ""
 "As publishing workflows grow, unrestrained Entity definition leads to Entity "
@@ -88,13 +81,12 @@ msgid ""
 msgstr ""
 
 #. Tag: para
-#: Introduction.xml:29
 #, no-c-format
 msgid ""
 "Entities also present an essentially insurmountable obstacle to quality "
-"translation (see <xref linkend=\"sect-Publican-Files_in_the_Book_directory-"
-"Book_Name.ent\"/>). Consequently, while we are not reducing the "
-"<filename><replaceable>Book_Name</replaceable>.ent</filename> file's "
-"functionality, we are no longer considering requests to add functionality or "
-"features associated with Entity use."
+"translation (see <xref linkend=\"sect-Users_Guide-"
+"Files_in_the_Book_directory-Book_Name.ent\"/>). Consequently, while we are "
+"not reducing the <filename><replaceable>Book_Name</replaceable>.ent</"
+"filename> file&#39;s functionality, we are no longer considering requests to "
+"add functionality or features associated with Entity use."
 msgstr ""
