--- a/publican/content/docs/de-DE/Revision_History.po
+++ b/publican/content/docs/de-DE/Revision_History.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Users_Guide VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-15 05:51+0000\n"
+"POT-Creation-Date: 2009-03-03 05:14+0000\n"
 "PO-Revision-Date: 2008-08-20 06:04+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -14,57 +14,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
-#: Revision_History.xml:6
 #, no-c-format
 msgid "Revision History"
 msgstr ""
 
 #. Tag: author
-#: Revision_History.xml:12
-#, no-c-format
-msgid ""
-"<firstname>Don</firstname> <surname>Domingo</surname> <email>ddomingo@redhat."
-"com</email>"
-msgstr ""
-
-#. Tag: member
-#: Revision_History.xml:19
-#, no-c-format
-msgid "Adding \"Conditional Tagging\" section."
-msgstr ""
-
-#. Tag: author
-#: Revision_History.xml:26
-#, no-c-format
-msgid ""
-"<firstname>Brian</firstname> <surname>Fort&eacute;</surname> "
-"<email>bforte@redhat.com</email>"
-msgstr ""
-
-#. Tag: member
-#: Revision_History.xml:33
-#, no-c-format
-msgid ""
-"General edits and updates related to Publican 0.36 release. Also, new "
-"section added to Chapter 3.3."
-msgstr ""
-
-#. Tag: author
-#: Revision_History.xml:40 Revision_History.xml:68
-#, no-c-format
-msgid ""
-"<firstname>Murray</firstname> <surname>McAllister</surname> "
-"<email>mmcallis@redhat.com</email>"
-msgstr ""
-
-#. Tag: member
-#: Revision_History.xml:47
-#, no-c-format
-msgid "Updated Branding to note addition of oVirt and GIMP brands"
-msgstr ""
-
-#. Tag: author
-#: Revision_History.xml:54
 #, no-c-format
 msgid ""
 "<firstname>Jeff</firstname> <surname>Fearn</surname> <email>jfearn@redhat."
@@ -72,13 +26,71 @@ msgid ""
 msgstr ""
 
 #. Tag: member
-#: Revision_History.xml:61
+#, no-c-format
+msgid "Added appendix on Makefile parameters"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Added entry to FAQ about java heap space."
+msgstr ""
+
+#. Tag: author
+#, no-c-format
+msgid ""
+"<firstname>Brian</firstname> <surname>Forté</surname> <email>bforte@redhat."
+"com</email>"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Added \"Pre-release and draft documentation\" section."
+msgstr ""
+
+#. Tag: author
+#, no-c-format
+msgid ""
+"<firstname>Don</firstname> <surname>Domingo</surname> <email>ddomingo@redhat."
+"com</email>"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Adding \"Conditional Tagging\" section."
+msgstr ""
+
+#. Tag: author
+#, no-c-format
+msgid ""
+"<firstname>Brian</firstname> <surname>Fort&eacute;</surname> "
+"<email>bforte@redhat.com</email>"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid ""
+"General edits and updates related to Publican 0.36 release. Also, new "
+"section added to Chapter 3.3."
+msgstr ""
+
+#. Tag: author
+#, no-c-format
+msgid ""
+"<firstname>Murray</firstname> <surname>McAllister</surname> "
+"<email>mmcallis@redhat.com</email>"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Updated Branding to note addition of oVirt and GIMP brands"
+msgstr ""
+
+#. Tag: member
 #, no-c-format
 msgid "Updated FAQ"
 msgstr ""
 
 #. Tag: member
-#: Revision_History.xml:75
 #, no-c-format
 msgid "Initial content release"
 msgstr ""
