ja-JP Feedback.po for JBoss updated by Noriko Mizumoto
git-svn-id: file:///srv/svn/publican/trunk@678 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/ja-JP/Feedback.po
+++ b/publican-jboss/ja-JP/Feedback.po
@@ -1,13 +1,14 @@
-# translation of Feedback.po to Japanese
+# translation of ja.po to Japanese
 # Kiyoto Hashida <khashida@redhat.com>, 2007.
+# Noriko Mizumoto <noriko@redhat.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: Feedback\n"
+"Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-10-14 00:06+0000\n"
-"PO-Revision-Date: 2007-10-24 11:52+1000\n"
-"Last-Translator: Kiyoto Hashida <khashida@redhat.com>\n"
-"Language-Team: Japanese <jp@li.org>\n"
+"PO-Revision-Date: 2009-03-20 15:50+1000\n"
+"Last-Translator: Noriko Mizumoto <noriko@redhat.com>\n"
+"Language-Team: Japanese <fedora-trans-ja@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,7 +18,7 @@ msgstr ""
 #: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "フィードバックをお願いします。"
+msgstr "フィードバック"
 
 #. Tag: primary
 #: Feedback.xml:8
@@ -29,7 +30,7 @@ msgstr "フィードバック"
 #: Feedback.xml:9
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "このドキュメント用の連絡先情報"
+msgstr "本ガイドに関する連絡先"
 
 #. Tag: para
 #: Feedback.xml:11
@@ -41,21 +42,18 @@ msgid ""
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"このドキュメント内で誤字/脱字を発見された場合、又はこのドキュメントを改善する"
-"案をお持ちの 場合は、弊社までご連絡下さい。該当する製品 "
-"<application>&PRODUCT;.</application> に対して Bugzilla: <ulink url=\"http://"
-"bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> "
-"に報告を提出してください。"
+"本ガイドに誤植を見つけられた場合や本ガイドの改善案をお持ちの場合はぜひお知らせください。 Bugzilla <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> にて、 Product には <application>&PRODUCT;.</application> を選びレポートの提出をお願いいたします。"
 
 #. Tag: para
 #: Feedback.xml:14
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"バグ報告を提出される場合は、そのドキュメントの識別子 <citetitle>&BOOKID;</"
-"citetitle> を 忘れずに添えてください。"
+"バグレポートを提出される場合は、 そのガイドの識別子となる <citetitle>&BOOKID;</"
+"citetitle> を必ず明記して頂くようお願いします。"
 
 #. Tag: para
 #: Feedback.xml:17
@@ -65,10 +63,5 @@ msgid ""
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
-msgstr ""
-"ドキュメントを改善する御提案をお持ちの場合は、 出来るだけ詳しく説明して頂くよ"
-"うに お願いします。エラーを発見された場合は、そのセクション番号とその周辺の文"
-"章も含んで 頂くと弊社でより迅速にその場所が発見できるようになります。"
+msgstr "ドキュメントに関する改善のご意見についてはできるだけ具体的にお願いいたします。 エラーを発見された場合は、 セクション番号および該当部分の前後の文章も含めてご報告頂くと照合が容易になります。"
 
-#~ msgid "translator-credits"
-#~ msgstr "kiyoto james hashida, khashida@redhat.com, 2007"
