Fixes to publican-fedora/hu-HU/Feedback.po
git-svn-id: file:///srv/svn/publican/trunk@711 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/hu-HU/Feedback.po
+++ b/publican-fedora/hu-HU/Feedback.po
@@ -43,8 +43,8 @@ msgid ""
 msgstr ""
 "Ha nyomdahibát talál e kézikönyvben, vagy bármilyen gondolata támad "
 "arról, hogyan javíthatnánk e kézikönyvet, szeretnénk tudni róla! Kérem "
-"adjon fel egy jelentést a Bugzillába: <ulink·url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>·a következő termékre:·"
+"adjon fel egy jelentést a Bugzillába: <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> a következő termékre: "
 "<application>&PRODUCT;.</application>"
 
 #. Tag: para
